Increase container width and fix footer spacing

--- a/newsletter.css
+++ b/newsletter.css
@@ -31,14 +31,14 @@ a {
 }
 
 .container {
-    max-width: 600px;
+    max-width: 960px;
     margin: 0 auto;
 }
 
 .outer {
     margin: 0 auto;
     width: 100%;
-    max-width: 600px;
+    max-width: 960px;
     border-spacing: 0;
 
     background-image: url('https://drive.google.com/uc?export=view&id=1dQKwKeUTLuZFi64MaGJNrTLPuv_t4wY1');
@@ -304,30 +304,26 @@ a {
     font-family: 'Roboto', sans-serif;
     font-style: normal;
     font-weight: normal;
-    font-size: 15px;
+    font-size: 20px;
     letter-spacing: 0.02em;
 
-    margin-left: 4px;
+    margin-left: 6px;
 
     width: 100%;
 }
 
 .social .lightbulb {
-    width: 5vw;
-    max-width: 43px;
-}
-
-.right {
-    margin-left: 15px;
+    width: 7.5vw;
+    max-width: 72px;
 }
 
 .social .icon {
-    width: 5vw;
-    max-width: 22px;
+    width: 4vw;
+    max-width: 32px;
 }
 
 .social .smColumn {
-    width: 10%;
+    width: 9%;
 }
 
 .social .mdColumn {
@@ -335,5 +331,5 @@ a {
 }
 
 .social .lgColumn {
-    width: 38%;
+    width: 39%;
 }
